css/VideoPlayer.css
/* ... */
.fl-videoPlayer-volumeControl.ui-corner-all {
    border-radius: 0px 0px 0px 0px;
}
.fl-videoPlayer-volumeControl .ui-slider-handle {
    height: 10%;
    margin-bottom: 0;
}

.fl-videoPlayer-volumeContainer:hover .fl-videoPlayer-volumeControl,
.fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-volumeControl {
    display: inline;
}

/* Volume slider theming */
.fl-theme-prefsEditor-yb .fl-videoPlayer-volumeControl,
.fl-theme-prefsEditor-wb .fl-videoPlayer-volumeControl {
    box-shadow: inset 0 0 0 2px #000000;
    outline: 1px solid #000000;
}
.fl-theme-prefsEditor-yb .fl-videoPlayer-volumeControl {
    background-image: url('../images/yellow/sliderbg_yellowonblack.jpg') !important;
}
.fl-theme-prefsEditor-wb .fl-videoPlayer-volumeControl {
    background-image: url('../images/white/sliderbg_whiteonblack.jpg') !important;
}
.fl-theme-prefsEditor-yb .fl-videoPlayer-volumeControl .ui-slider-handle,
.fl-theme-prefsEditor-wb .fl-videoPlayer-volumeControl .ui-slider-handle {
    background-image: none !important;
    border: 2px solid #000000 !important;
}
.fl-theme-prefsEditor-yb .fl-videoPlayer-volumeControl .ui-slider-handle {
    background-color: #FFFF00 !important;
}
.fl-theme-prefsEditor-wb .fl-videoPlayer-volumeControl .ui-slider-handle {
    background-color: #FFFFFF !important;
}
.fl-theme-prefsEditor-yb .fl-videoPlayer-volumeControl .ui-slider-range-min,
.fl-theme-prefsEditor-wb .fl-videoPlayer-volumeControl .ui-slider-range-min {
    background-image: none !important;
    background-color: #000000 !important;
}

.fl-theme-prefsEditor-by .fl-videoPlayer-volumeControl {
    box-shadow: inset 0 0 0 2px #FFFF00;
    outline: 1px solid #FFFF00;
}
.fl-theme-prefsEditor-bw .fl-videoPlayer-volumeControl {
    box-shadow: inset 0 0 0 2px #FFFFFF;
    outline: 1px solid #FFFFFF;
}
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-volumeControl {
    box-shadow: inset 0 0 0 2px #555555;
    outline: 1px solid #555555;
}
.fl-theme-prefsEditor-by .fl-videoPlayer-volumeControl {
    background-image: url('../images/black/sliderbg_blackonyellow.jpg') !important;
}
.fl-theme-prefsEditor-bw .fl-videoPlayer-volumeControl {
    background-image: url('../images/black/sliderbg_blackonwhite.jpg') !important;
}
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-volumeControl {
    background-image: url('../images/lgdg/sliderbg_lgdg.png') !important;
}
.fl-theme-prefsEditor-by .fl-videoPlayer-volumeControl .ui-slider-handle,
.fl-theme-prefsEditor-bw .fl-videoPlayer-volumeControl .ui-slider-handle {
    background-image: none !important;
    background-color: #000000 !important;
}
.fl-theme-prefsEditor-by .fl-videoPlayer-volumeControl .ui-slider-handle {
    border: 2px solid #FFFF00 !important;
}
.fl-theme-prefsEditor-bw .fl-videoPlayer-volumeControl .ui-slider-handle {
    border: 2px solid #FFFFFF !important;
}
.fl-theme-prefsEditor-by .fl-videoPlayer-volumeControl .ui-slider-range-min {
    background-image: none !important;
    background-color: #FFFF00 !important;
}
.fl-theme-prefsEditor-bw .fl-videoPlayer-volumeControl .ui-slider-range-min {
    background-image: none !important;
    background-color: #FFFFFF !important;
}
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-volumeControl .ui-slider-range-min {
    background-image: none !important;
    background-color: #555555 !important;
}


/**********************************
 * Captions and Transcripts Menus *
 **********************************/

.fl-videoPlayer-languageMenu {
    position: absolute;
    bottom: 2.5em;
    padding: 0;
    width: 10em;
    font-size: 0.8em;
    background: #f2f2f2;
    z-index: 2;
}

/* TODO: This is a temporary workaround to an absolute positioning issue with the menu buttons */
.fl-videoPlayer-captions .fl-videoPlayer-languageMenu {
    margin-left: -3.5em;
}

.fl-videoPlayer-transcript .fl-videoPlayer-languageMenu {
    margin-left: -1em;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem {
    display: block;
    background: #fff;
    width: 81%;
    padding: 5% 5% 5% 10%;
    margin: 2% 0 0% 2%;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem:hover {
    background-color: #ffcc00;
}
.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFFFF;
    background-color: #3195C7;
}
.fl-theme-prefsEditor-yb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-prefsEditor-yb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #000000 !important;
    background-color: #FFFF00 !important;
}
.fl-theme-prefsEditor-wb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-prefsEditor-wb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #000000 !important;
    background-color: #FFFFFF !important;
}
.fl-theme-prefsEditor-by .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-prefsEditor-by .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFF00 !important;
    background-color: #000000 !important;
}
.fl-theme-prefsEditor-bw .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-prefsEditor-bw .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFFFF !important;
    background-color: #000000 !important;
}
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFFFF !important;
    background-color: #bdbdbb !important;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active {
    background: #fff;
    font-weight: bold;
}
/* ... */

